correction form inscription on mobile

--- a/static/css/style-form.less
+++ b/static/css/style-form.less
@@ -11,7 +11,7 @@ form {
 
   .mdl-textfield {
     @media screen and (max-width: 480px) {
-      width: 250px;
+      width: 100%;
     }
   }
 
